[gd_scene load_steps=11 format=3 uid="uid://cxb64hql8b5qy"]

[ext_resource type="Script" uid="uid://cuwortfqb4yqy" path="res://nodes/modules/sword/sword.gd" id="1_q0ep5"]
[ext_resource type="Texture2D" uid="uid://cql5xlwhb5kig" path="res://arts/slash.png" id="3_i2kl5"]
[ext_resource type="Texture2D" uid="uid://6ts057xee6ri" path="res://arts/player/r_sword.png" id="5_m1ral"]
[ext_resource type="Texture2D" uid="uid://7ercfqofu73e" path="res://arts/player/l_sword.png" id="6_pmdvg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6i8tx"]
radius = 26.0
height = 106.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6i8tx"]
atlas = ExtResource("3_i2kl5")
region = Rect2(0, 0, 287, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1ral"]
atlas = ExtResource("3_i2kl5")
region = Rect2(0, 294, 287, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmdvg"]
atlas = ExtResource("3_i2kl5")
region = Rect2(0, 588, 287, 294)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gk1b"]
atlas = ExtResource("3_i2kl5")
region = Rect2(0, 882, 287, 294)

[sub_resource type="SpriteFrames" id="SpriteFrames_xdiau"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i8tx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1ral")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmdvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gk1b")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[node name="Sword" type="Area2D" node_paths=PackedStringArray("leftSprite", "rightSprite")]
collision_layer = 2
collision_mask = 8
script = ExtResource("1_q0ep5")
leftSprite = NodePath("LSword")
rightSprite = NodePath("RSword")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 0)
shape = SubResource("CapsuleShape2D_6i8tx")

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(32.9375, 6.27744)
scale = Vector2(0.369774, 0.369773)
sprite_frames = SubResource("SpriteFrames_xdiau")

[node name="WindupTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="RSword" type="Sprite2D" parent="."]
rotation = -1.66265
scale = Vector2(0.118056, 0.118056)
texture = ExtResource("5_m1ral")
offset = Vector2(-22, 186)

[node name="LSword" type="Sprite2D" parent="."]
rotation = -1.22881
scale = Vector2(0.126375, 0.126375)
texture = ExtResource("6_pmdvg")
offset = Vector2(77, 178)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_active_timer_timeout"]
[connection signal="timeout" from="WindupTimer" to="." method="_on_windup_timer_timeout"]
